kubernetes/ingress-tls.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: la-quete
  namespace: la-quete
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - la-quete.thuault.com
    secretName: la-quete-tls
  rules:
  - host: la-quete.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: la-quete
          servicePort: 80
